fix dark mode for navbar

--- a/less/hux-blog.less
+++ b/less/hux-blog.less
@@ -518,7 +518,7 @@ samp {
           color: var(--gray-dark);
           &:hover,
           &:focus {
-            color: @brand-primary;
+            color: @brand-primary !important;
           }
         }
       }
@@ -972,7 +972,7 @@ footer {
     background-color: inherit;
   }
   &:active {
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.25) !important;
   }
 }
 
